--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -4,6 +4,7 @@ import BlogPost from "../../layouts/BlogPost.astro";
 import { render } from "astro:content";
 
 import LikeCounter from "@components/likes/LikeCounter.vue";
+import LikeCounterAction from "@components/likes/LikeCounterAction.vue";
 
 export async function getStaticPaths() {
 	const posts = await getCollection("blog");
@@ -19,13 +20,13 @@ const { Content } = await render(post);
 ---
 
 <BlogPost {...post.data}>
-
 	<div
 		style={{
 			height: "50px",
 		}}
 	>
-		<LikeCounter postId={post.id} client:only="vue" /> 
+		<!-- <LikeCounter postId={post.id} client:only="vue" />  -->
+		<LikeCounterAction postId={post.id} client:only="vue" />
 	</div>
 
 	<Content />
